--- a/src/Component/HomePage/OurStory/OurStory.scss
+++ b/src/Component/HomePage/OurStory/OurStory.scss
@@ -4,6 +4,7 @@
         background: linear-gradient(rgba(255, 255, 255, 0.523), rgba(255, 255, 255, 0.505)), url('./Images/our-story-gradient.png');
         background-repeat: no-repeat;
         background-size: cover;
+        padding-bottom: 5rem;
         // padding: 3rem 1rem;
 
         .our-story-leaf {
