--- a/src/Component/AboutUs/AboutUs.scss
+++ b/src/Component/AboutUs/AboutUs.scss
@@ -123,14 +123,16 @@
     .mission {
         .mission-images {
             display: flex;
-            gap: 50px;
+            margin-left: -.8rem;
+            gap: 40px;
 
 
             .mission-girl {
                 width: 337px;
                 height: 551px;
                 overflow: hidden;
-                border-radius: 40px;
+                border-top-right-radius: 40px;
+                border-bottom-right-radius: 40px;
 
                 img {
                     width: 100%;
@@ -157,10 +159,17 @@
         }
     }
 
-    // Mission
+    // promise
     .promise {
         padding: 25px;
         margin-top: 7rem;
+        position: relative;
+
+        .promise-bottle {
+            position: absolute;
+            bottom: 51.5%;
+            left: 38%;
+        }
 
         h2 {
             font-family: Nohemi;
@@ -192,24 +201,32 @@
             border-radius: 20px;
             margin: auto;
             margin-top: 3rem;
-            .icon{
+
+            .icon {
                 height: 70px;
                 width: 70px;
-                img{
+
+                img {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                 }
             }
-            .icon-leaf{
+
+            .icon-leaf {
                 // padding-top: 1rem;
-                  height: 70px;
+                height: 70px;
                 width: 70px;
-                img{
+
+                img {
                     width: 100%;
                     height: 100%;
                     // object-fit: cover;
                 }
+            }
+
+            .feature-para {
+                width: 90%;
             }
 
             h3 {
@@ -238,5 +255,198 @@
         }
     }
 
+    @media(max-width:576px) {
+
+        .our-story {
+            padding: 4rem 1rem 4rem 1rem;
+
+            h3 {
+                font-size: 30px;
+            }
+
+            h2 {
+                font-size: 40px;
+
+            }
+
+            p {
+                font-size: 16px;
+
+            }
+        }
+        .vision,.mission{
+        margin-top: 3rem;
+
+        
+
+              h3 {
+                font-size: 30px;
+            }
+
+            h2 {
+                font-size: 30px;
+
+            }
+
+            p {
+                font-size: 16px;
+
+            }
+            .images {
+            height: 100px;
+            display: flex;
+            gap: 2rem;
+            margin-top: 5rem;
+            padding-right: 2rem;
+            // overflow-x: hidden;
+
+            .imge-individual {
+                width: 182px !important;
+                border-radius: 20px;
+                height: 156.5886993408203px;
+               
+            }
+
+            .imge-individual2 {
+                width: 230px;
+                border-radius: 20px;
+                height: 250px;
+                margin-top: 3rem;
+                margin-right: -3rem;
+
+
+               
+            }
+        }
+        }
+        .mission{
+            background-color: red;
+            .od-1{
+                order: 2;
+                margin-top: 4rem;
+
+            }
+            .od-2{
+                margin-top: 13rem;
+            }
+         
+             .mission-images {
+            display: flex;
+            margin-left: 0rem;
+            gap: 20px;
+            overflow: hidden;
+
+
+
+            .mission-girl {
+                width: 257px;
+                height: 270px;
+                border-radius: 20px;
+
+               
+
+            }
+
+            .mission-bottle {
+                margin-top: 0.5rem;
+                width: 215.5px;
+                height: 124px;
+                border-radius: 20px;
+                margin-right: -2rem;
+                overflow: hidden;
+
+              
+
+            }
+        }
+
+        }
+        .promise {
+        padding: 16px;
+        margin-top: 7rem;
+        position: relative;
+
+        .promise-bottle {
+            position: absolute;
+            // bottom: 51.5%;
+            top: 12.5%;
+            left: 0%;
+            width: 327px;
+            height: 112px;
+        }
+
+        h2 {
+            
+            font-size: 35px;
+        }
+
+        p {
+            font-size: 16px;
+        
+        }
+
+        .commitment-features {
+            background: #F3FFF4;
+            padding: 48px;
+            width: 100%;
+            height: 100%;
+            border: 1px solid #CEEDD1;
+            border-radius: 20px;
+            margin: auto;
+            margin-top: 8rem;
+
+            .icon {
+                height: 70px;
+                width: 70px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .icon-leaf {
+                // padding-top: 1rem;
+                height: 70px;
+                width: 70px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    // object-fit: cover;
+                }
+            }
+
+            .feature-para {
+                width: 90%;
+            }
+
+            h3 {
+                font-family: General Sans;
+                font-weight: 600;
+                font-size: 20px;
+                line-height: 130%;
+                letter-spacing: 0%;
+                padding-top: 1rem;
+            }
+
+            p {
+                font-family: General Sans;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 130%;
+                letter-spacing: 0%;
+                padding-top: .8rem;
+
+            }
+
+            .col-lg-3 {
+                padding: 0 15px;
+                margin-bottom: 30px;
+            }
+        }
+    }
+    }
 
 }
