--- a/src/Component/AboutUs/AboutUs.scss
+++ b/src/Component/AboutUs/AboutUs.scss
@@ -43,7 +43,10 @@
         }
     }
 
+    .vision{
+        padding: 30px;
 
+    }
     .vision,
     .mission {
         // padding: 30px;
@@ -320,7 +323,7 @@
         }
         }
         .mission{
-            background-color: red;
+            
             .od-1{
                 order: 2;
                 margin-top: 4rem;
