working on blog detail page

--- a/src/Component/pages/Blogs/Blogs.scss
+++ b/src/Component/pages/Blogs/Blogs.scss
@@ -1,4 +1,8 @@
 .BlogsMainWrapper {
+    a{
+        text-decoration: none;
+        color: black;
+    }
     .blogs-content {
         padding: 3rem;
     }
