--- a/src/Component/pages/ProductPage/ProductPage.scss
+++ b/src/Component/pages/ProductPage/ProductPage.scss
@@ -2,6 +2,10 @@
     margin-top: 4rem;
     overflow: hidden;
 
+
+    // 1st
+
+
     .product-page-sub {
         .product-page-card {
             background-color: #f6f6f6;
@@ -191,6 +195,285 @@
         }
     }
 
+
+    // 2nd
+
+
+    .text-only-product {
+        margin-left: 2rem;
+        margin-top: 2rem;
+
+        .text-sections-whole {
+            p {
+                font-family: General Sans;
+                font-weight: 400;
+                font-size: 17px;
+                line-height: 130%;
+                letter-spacing: -2%;
+                color: #1B1919;
+
+            }
+
+            h6 {
+                font-family: General Sans;
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 130%;
+                letter-spacing: -2%;
+
+            }
+
+            span {
+                font-family: General Sans;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 130%;
+                letter-spacing: -2%;
+
+            }
+        }
+    }
+
+    // ####3rd
+    .image-whole-section {
+        margin-top: 2rem;
+        width: 80%;
+        margin-bottom: 3rem;
+        margin-left: 2rem;
+
+
+
+        .card-image-section {
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 500px;
+            background-color: #F2F2F2;
+
+            img {
+                width: 50%;
+                // object-fit: cover;
+                // height: 380px;
+            }
+        }
+
+        .card-image-section-2 {
+
+            height: 500px;
+            // background-color: blue;
+            background-color: #F2F2F2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                width: 259px;
+                object-fit: cover;
+                height: 330px;
+            }
+        }
+    }
+
+
+    ////4th
+
+    .our-process-main-section {
+        width: 100%;
+
+        .process {
+            font-family: Resonate;
+            font-weight: 400;
+            font-size: 56px;
+            // line-height: 100%;
+            letter-spacing: -2%;
+            // text-align: center;
+            background: linear-gradient(35.63deg, #F5BD2E, #346D00 37.03%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-top: 3rem;
+            padding-top: 1rem;
+        }
+
+        .Virgin {
+            font-family: Nohemi;
+            font-weight: 600;
+            font-size: 32px;
+            line-height: 105%;
+            letter-spacing: -2%;
+            background: linear-gradient(92.63deg, #738933, #062C0B 85.03%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+
+        }
+
+        .cards-n-images-section {
+            height: 400px;
+            margin-top: 2rem;
+            // background-color: red;
+            width: 70%;
+            margin-bottom: 4rem;
+
+            .steps-only {
+
+                font-family: DM Sans;
+                font-weight: 700;
+                font-size: 15px;
+                line-height: 130%;
+                letter-spacing: 0%;
+                text-align: center;
+                color: #3DAE4A !important;
+                text-align: left;
+                margin-top: 2rem;
+
+
+
+            }
+
+            .Handpicked {
+                font-family: General Sans;
+                font-weight: 600;
+                font-size: 20px;
+                line-height: 130%;
+                letter-spacing: 0%;
+                color: #1B1919 !important;
+
+            }
+
+            .para-process {
+                font-family: General Sans;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 130%;
+                letter-spacing: 0%;
+                color: #1B1919 !important;
+
+            }
+
+
+        }
+
+        .Other-pro {
+            font-family: Nohemi;
+            font-weight: 600;
+            font-size: 32px;
+            line-height: 105%;
+            letter-spacing: -2%;
+            // text-align: center;
+            background: linear-gradient(92.63deg, #738933, #062C0B 85.03%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+
+        }
+
+
+        .product-card-main {
+            padding: 0.5rem;
+
+            .product-card {
+                // background-color: #ffffff;
+                // border: 1px solid #e0e0e0;
+                border-radius: 8px;
+                width: 100%;
+                min-height: 300px;
+                transition: transform 0.2s ease, box-shadow 0.2s ease;
+
+
+
+                .prod-image-section {
+                    width: 100%;
+                    height: 307px;
+                    background-color: #F6F6F6;
+                    border-radius: 12px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+
+                    img {
+                        width: 70%;
+                    }
+
+                    .add-icon-wrapper {
+                        position: absolute;
+                        bottom: 1rem;
+                        right: 1rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border: 1px solid rgb(72, 72, 72);
+                        border-radius: 50%;
+                        padding: .4rem;
+                        cursor: pointer;
+                        color: #1B1919;
+
+                        .add-icon {
+                            font-size: 25px;
+                        }
+                    }
+
+                    .heart-icon-section {
+                        position: absolute;
+                        top: 1rem;
+                        left: 15rem;
+
+                        .heart-icon {
+                            color: #E3762D;
+                        }
+                    }
+                }
+
+                .product-details {
+                    padding-top: 1rem;
+
+                    h3 {
+                        font-family: DM Sans;
+                        font-weight: 500;
+                        font-size: 18px;
+                        line-height: 130%;
+                        color: #1B1919;
+                    }
+
+                    h4 {
+                        font-family: General Sans;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 130%;
+                        letter-spacing: 0%;
+                        color: #666666;
+
+                        span {
+                            color: #3DAE4A;
+                            font-weight: 600;
+                        }
+                    }
+
+                    p {
+                        color: #1B1919;
+                        font-family: General Sans;
+                        font-weight: 600;
+                        font-size: 20px;
+                        line-height: 130%;
+                        letter-spacing: 0%;
+
+                    }
+                }
+            }
+        }
+
+
+
+
+
+    }
+
+    ///4th end
+    /// 
+    /// 
+
+
+
+
     // Medium screens and up
     @media (min-width: 768px) {
         .product-page-card {
@@ -224,6 +507,16 @@
                 }
             }
         }
+    }
+
+    @media (max-width: 576px) {
+
+        .text-only-product {
+            margin-left: 0rem;
+            margin-top: 0rem;
+
+        }
+
     }
 
     // Extra small screens
