Working on product page

--- a/src/Component/pages/AllProducts/AllProducts.scss
+++ b/src/Component/pages/AllProducts/AllProducts.scss
@@ -123,6 +123,7 @@
                             color: #3DAE4A ;
 
                         }
+                        //////
                     }
 
                     .price {
