--- a/src/Component/pages/ProductPage/ProductPage.scss
+++ b/src/Component/pages/ProductPage/ProductPage.scss
@@ -370,6 +370,8 @@
         .product-card-main {
             padding: 0.5rem;
 
+            ///////////
+
             .product-card {
                 // background-color: #ffffff;
                 // border: 1px solid #e0e0e0;
