--- a/src/Component/HomePage/ProductCards/ProductCards.scss
+++ b/src/Component/HomePage/ProductCards/ProductCards.scss
@@ -25,6 +25,7 @@
     height: 690px;
     display: flex;
     flex-direction: column;
+    padding-bottom: 2rem;
     overflow: hidden; // Added to contain zoomed image
     transition: transform 0.3s ease; // Card transition for subtle lift effect
 
@@ -152,7 +153,7 @@
 
       @media(max-width: 576px) {
         left: 110px;
-        top: 180px;
+        top: 155px;
       }
     }
   }
